Fix flush alignment width issue #13

--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -16,17 +16,21 @@
 }
 
 // second-field-align 首行缩进适配
-.csl-entry.second-field-align-flush {
+.csl-bib-body.second-field-align-flush .csl-entry {
   display: flex;
 }
 
-.csl-entry.second-field-align-flush .csl-left-margin {
+.csl-bib-body.second-field-align-flush .csl-entry .csl-left-margin {
   float: left;
   margin-right: 0.5em;
 }
 
+.csl-bib-body.second-field-align-flush.maxoffset-4 .csl-entry .csl-left-margin {
+  width: 2.5em;
+}
+
 // hangingindent 悬挂缩进适配
-.csl-entry.hangingindent-true {
+.csl-bib-body.hangingindent-true .csl-entry {
   text-indent: -2em;
   padding-left: 2em;
 }
